--- a/index.html
+++ b/index.html
@@ -8,4 +8,65 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   </head>
+
   <body>
+    <header>
+      <h1>The Code Review<h1>
+      <h2>Signup for our newsletter</h2>
+      <p>Get the latest news delivered right to your mailbox</p>
+    </header>
+
+   <form>
+     <fieldset>
+     <legend>Contact Information</legend>
+
+      <label>
+      <input type="text" id="name" name="user_name">
+
+      <label>
+      <input type="email" id="email" name="user_email">
+
+      <label>
+      <input type="tel" id="phone_number" name="user_phonenumber">
+
+      <label>
+      <input type="text" id="street_address" name="user_streetaddress">
+
+      <label>
+      <input type="text" id="city" name="user_city">
+
+      <label>
+      <input type="" id="state" name="user_state">
+
+      <label>
+      <input type="" id="zipcode" name="user_zipcode">
+
+      <fieldset>
+
+
+      <fieldset>
+      <legend>Newsletter</legend>
+
+      <label>
+      <input>
+      <input>
+      <input>
+
+      <label>
+      <input>
+      <input>
+
+      <textarea></textarea>
+
+
+
+      </fieldset>
+
+   </form>
+
+
+    <footer>
+    </footer>
+
+  </body>
+</html>
