--- a/index.html
+++ b/index.html
@@ -20,22 +20,22 @@
      <fieldset>
      <legend>Contact Information</legend>
 
-      <label>
+      <label for="name">Full Name</label>
       <input type="text" id="name" name="user_name">
 
-      <label>
+      <label for="email">Email Address</label>
       <input type="email" id="email" name="user_email">
 
-      <label>
+      <label for="phone_number">Phone Number</label>
       <input type="tel" id="phone_number" name="user_phonenumber">
 
-      <label>
+      <label for="street_address">Street Address</label>
       <input type="text" id="street_address" name="user_streetaddress">
 
-      <label>
+      <label for="city">City</label>
       <input type="text" id="city" name="user_city">
 
-      <label>
+      <label for="State">State</label>
       <select id="state" name="user_state">
         <option value="AL">Alabama</option>
         <option value="AK">Alaska</option>
@@ -88,10 +88,8 @@
         <option value="WV">West Virginia</option>
         <option value="WI">Wisconsin</option>
         <option value="WY">Wyoming</option>
-  
 
-
-      <label>
+      <label for="zipcode">Zipcode</label>
       <input type="number" id="zipcode" name="user_zipcode">
 
       <fieldset>
@@ -101,7 +99,7 @@
       <legend>Newsletter</legend>
 
       <label>
-      <input>
+      <input type="" id="" value="" name="">
       <input>
       <input>
 
