--- a/index.html
+++ b/index.html
@@ -98,16 +98,17 @@
       <fieldset>
       <legend>Newsletter</legend>
 
-      <label>
-      <input type="" id="" value="" name="">
-      <input>
-      <input>
+      <label>Select the newsletters you would like to recieve</label>
+      <input type="checkbox" id="fashion" value="fashion_news" name="newsletter"><label>Fashion News</label><br>
+      <input type="checkbox" id="health" value="health_news" name="newsletter"><label>Health News</label><br>
+      <input type="checkbox" id="tech" value="tech_news" name="newsletter"><label>Tech News</label><br>
 
-      <label>
-      <input>
-      <input>
+      <label>Newsletter Format</label>
+      <input type="radio" id="html" value="html" name="format"><label>HTML</label><br>
+      <input type="radio" id="plain_text" value="plain_text" name="format"><label>Plain Text</label><br>
 
-      <textarea></textarea>
+      <label>Other topics you'd like to hear about</label>
+      <textarea id="topics" name="topics"></textarea>
 
 
 
