--- a/index.html
+++ b/index.html
@@ -16,106 +16,110 @@
       <p>Get the latest news delivered right to your mailbox</p>
     </header>
 
-   <form>
-     <fieldset>
-     <legend>Contact Information</legend>
+   <form action="index.html" method="post">
 
-      <label for="name">Full Name</label>
-      <input type="text" id="name" name="user_name">
+     <div class="contact">
+         <fieldset>
+         <legend id="Contact">Contact Information</legend>
 
-      <label for="email">Email Address</label>
-      <input type="email" id="email" name="user_email">
+          <label for="name">Full Name</label>
+          <input type="text" id="name" name="user_name">
 
-      <label for="phone_number">Phone Number</label>
-      <input type="tel" id="phone_number" name="user_phonenumber">
+          <label for="email">Email Address</label>
+          <input type="email" id="email" name="user_email">
 
-      <label for="street_address">Street Address</label>
-      <input type="text" id="street_address" name="user_streetaddress">
+          <label for="phone_number">Phone Number</label>
+          <input type="tel" id="phone_number" name="user_phonenumber">
 
-      <label for="city">City</label>
-      <input type="text" id="city" name="user_city">
+          <label for="street_address">Street Address</label>
+          <input type="text" id="street_address" name="user_streetaddress">
 
-      <label for="State">State</label>
-      <select id="state" name="user_state">
-        <option value="AL">Alabama</option>
-        <option value="AK">Alaska</option>
-        <option value="AZ">Arizona</option>
-        <option value="AR">Arkansas</option>
-        <option value="CA">California</option>
-        <option value="CO">Colorado</option>
-        <option value="CT">Connecticut</option>
-        <option value="DE">Delaware</option>
-        <option value="DC">District of Columbia</option>
-        <option value="FL">Florida</option>
-        <option value="GA">Georgia</option>
-        <option value="HI">Hawaii</option>
-        <option value="ID">Idaho</option>
-        <option value="IL">Illinois</option>
-        <option value="IN">Indiana</option>
-        <option value="IA">Iowa</option>
-        <option value="KS">Kansas</option>
-        <option value="KY">Kentucky</option>
-        <option value="LA">Lousiana</option>
-        <option value="ME">Maine</option>
-        <option value="MD">Maryland</option>
-        <option value="MA">Massachusetts</option>
-        <option value="MI">Michigan</option>
-        <option value="MN">Minnesota</option>
-        <option value="MS">Mississippi</option>
-        <option value="MO">Missouri</option>
-        <option value="MT">Montana</option>
-        <option value="NE">Nebraska</option>
-        <option value="NV">Nevada</option>
-        <option value="NH">New Hampshire</option>
-        <option value="NJ">New Jersey</option>
-        <option value="NM">New Mexico</option>
-        <option value="NY">New York</option>
-        <option value="NC">North Carolina</option>
-        <option value="ND">North Dakota</option>
-        <option value="OH">Ohio</option>
-        <option value="OK">Oklahoma</option>
-        <option value="OR">Oregon</option>
-        <option value="PA">Pennsylvania</option>
-        <option value="RI">Rhode Island</option>
-        <option value="SC">South Carolina</option>
-        <option value="SD">South Dakota</option>
-        <option value="TN">Tennessee</option>
-        <option value="TX">Texas</option>
-        <option value="UT">Utah</option>
-        <option value="VT">Vermont</option>
-        <option value="VA">Virginia</option>
-        <option value="WA">Washington</option>
-        <option value="WV">West Virginia</option>
-        <option value="WI">Wisconsin</option>
-        <option value="WY">Wyoming</option>
+          <label for="city">City</label>
+          <input type="text" id="city" name="user_city">
 
-      <label for="zipcode">Zipcode</label>
-      <input type="number" id="zipcode" name="user_zipcode">
+          <label for="State">State</label>
+          <select id="state" name="user_state">
+            <option value="AL">Alabama</option>
+            <option value="AK">Alaska</option>
+            <option value="AZ">Arizona</option>
+            <option value="AR">Arkansas</option>
+            <option value="CA">California</option>
+            <option value="CO">Colorado</option>
+            <option value="CT">Connecticut</option>
+            <option value="DE">Delaware</option>
+            <option value="DC">District of Columbia</option>
+            <option value="FL">Florida</option>
+            <option value="GA">Georgia</option>
+            <option value="HI">Hawaii</option>
+            <option value="ID">Idaho</option>
+            <option value="IL">Illinois</option>
+            <option value="IN">Indiana</option>
+            <option value="IA">Iowa</option>
+            <option value="KS">Kansas</option>
+            <option value="KY">Kentucky</option>
+            <option value="LA">Lousiana</option>
+            <option value="ME">Maine</option>
+            <option value="MD">Maryland</option>
+            <option value="MA">Massachusetts</option>
+            <option value="MI">Michigan</option>
+            <option value="MN">Minnesota</option>
+            <option value="MS">Mississippi</option>
+            <option value="MO">Missouri</option>
+            <option value="MT">Montana</option>
+            <option value="NE">Nebraska</option>
+            <option value="NV">Nevada</option>
+            <option value="NH">New Hampshire</option>
+            <option value="NJ">New Jersey</option>
+            <option value="NM">New Mexico</option>
+            <option value="NY">New York</option>
+            <option value="NC">North Carolina</option>
+            <option value="ND">North Dakota</option>
+            <option value="OH">Ohio</option>
+            <option value="OK">Oklahoma</option>
+            <option value="OR">Oregon</option>
+            <option value="PA">Pennsylvania</option>
+            <option value="RI">Rhode Island</option>
+            <option value="SC">South Carolina</option>
+            <option value="SD">South Dakota</option>
+            <option value="TN">Tennessee</option>
+            <option value="TX">Texas</option>
+            <option value="UT">Utah</option>
+            <option value="VT">Vermont</option>
+            <option value="VA">Virginia</option>
+            <option value="WA">Washington</option>
+            <option value="WV">West Virginia</option>
+            <option value="WI">Wisconsin</option>
+            <option value="WY">Wyoming</option>
 
-      <fieldset>
+          <label for="zipcode">Zipcode</label>
+          <input type="number" id="zipcode" name="user_zipcode">
 
-
-      <fieldset>
-      <legend>Newsletter</legend>
-
-      <label>Select the newsletters you would like to recieve</label>
-      <input type="checkbox" id="fashion" value="fashion_news" name="newsletter"><label>Fashion News</label><br>
-      <input type="checkbox" id="health" value="health_news" name="newsletter"><label>Health News</label><br>
-      <input type="checkbox" id="tech" value="tech_news" name="newsletter"><label>Tech News</label><br>
-
-      <label>Newsletter Format</label>
-      <input type="radio" id="html" value="html" name="format"><label>HTML</label><br>
-      <input type="radio" id="plain_text" value="plain_text" name="format"><label>Plain Text</label><br>
-
-      <label>Other topics you'd like to hear about</label>
-      <textarea id="topics" name="topics"></textarea>
+          <fieldset>
+      </div>
 
 
+      <div class="Newsletter">
 
-      </fieldset>
+          <fieldset>
+          <legend id="newsletter">Newsletter</legend>
+
+          <label>Select the newsletters you would like to recieve</label>
+          <input type="checkbox" id="fashion" value="fashion_news" name="newsletter"><label>Fashion News</label><br>
+          <input type="checkbox" id="health" value="health_news" name="newsletter"><label>Health News</label><br>
+          <input type="checkbox" id="tech" value="tech_news" name="newsletter"><label>Tech News</label><br>
+
+          <label>Newsletter Format</label>
+          <input type="radio" id="html" value="html" name="format"><label>HTML</label><br>
+          <input type="radio" id="plain_text" value="plain_text" name="format"><label>Plain Text</label><br>
+
+          <label>Other topics you'd like to hear about</label>
+          <textarea id="topics" name="topics"></textarea>
+
+          </fieldset>
+      </div>
+
 
    </form>
-
 
     <footer>
     </footer>
