--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
 
   <body>
     <header>
-      <h1>The Code Review<h1>
-      <h2>Signup for our newsletter</h2>
-      <p>Get the latest news delivered right to your mailbox</p>
+      <div class="header">
+        <h1>The Code Review<h1>
+      </div>
+
+      <div class="signup">
+        <h2>Signup for our newsletter</h2>
+        <p>Get the latest news delivered right to your mailbox</p>
+     </div>
+     
     </header>
 
    <form action="index.html" method="post">
