--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
              <legend id="contact">Contact Information</legend>
 
               <label for="name">Full Name</label>
-              <input type="text" id="name" name="user_name">
+              <input type="text" id="name" name="user_name" placeholder="Required">
 
               <label for="email">Email Address</label>
-              <input type="email" id="email" name="user_email">
+              <input type="email" id="email" name="user_email" placeholder="Required">
 
               <label for="phone_number">Phone Number</label>
               <input type="tel" id="phone_number" name="user_phonenumber">
