--- a/index.html
+++ b/index.html
@@ -112,14 +112,14 @@
           <fieldset>
               <legend id="newsletter">Newsletter</legend>
 
-              <label>Select the newsletters you would like to recieve</label>
+              <label class="title">Select each of the newsletters you would like to recieve</label><br>
               <input type="checkbox" id="fashion" value="fashion_news" name="newsletter"><label for="fashion">Fashion News</label><br>
               <input type="checkbox" id="health" value="health_news" name="newsletter"><label for="health">Health News</label><br>
               <input type="checkbox" id="tech" value="tech_news" name="newsletter"><label for="tech">Tech News</label><br>
 
-              <label>Newsletter Format</label><br>
-              <input type="radio" id="html" value="html" name="format"><label>HTML</label>
-              <input type="radio" id="plain_text" value="plain_text" name="format"><label>Plain Text</label>
+              <label class="title">Newsletter Format</label><br>
+              <input type="radio" id="html" value="html" name="format"><label>HTML</label><br>
+              <input type="radio" id="plain_text" value="plain_text" name="format"><label>Plain Text</label><br>
 
               <label>Other topics you'd like to hear about</label><br>
               <textarea id="topics" name="topics"></textarea>
