--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Frank+Ruhl+Libre:400|Italiana" rel="stylesheet">
+
   </head>
 
   <body>
@@ -122,17 +123,16 @@
               <input type="radio" id="plain_text" value="plain_text" name="format"><label>Plain Text</label><br>
 
               <label>Other topics you'd like to hear about</label><br>
-              <textarea id="topics" name="topics"></textarea>
+              <textarea id="topics" name="topics"></textarea><br>
 
+              <button type="submit" class="btn" id="user_signup">Sign Up</button>
           </fieldset>
       </div>
-
-
    </form>
 </div>
 
-
-    <footer>
+    <footer class="footer">
+      <p> &copy; copyright Nikki Turrisi 2019</p>
     </footer>
 
   </body>
