--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </div>
 
     <footer class="footer">
-      <p> &copy; copyright Nikki Turrisi 2019</p>
+      <p> &copy; Copyright Nikki Turrisi 2019</p>
     </footer>
 
   </body>
