--- a/index.html
+++ b/index.html
@@ -30,21 +30,32 @@
          <fieldset>
              <legend id="contact">Contact Information</legend>
 
+            <div class="name">
               <label for="name">Full Name</label>
               <input type="text" id="name" name="user_name" placeholder="Required">
+            </div>
 
+            <div class="email">
               <label for="email">Email Address</label>
               <input type="email" id="email" name="user_email" placeholder="Required">
+            </div>
 
+            <div class="number">
               <label for="phone_number">Phone Number</label>
               <input type="tel" id="phone_number" name="user_phonenumber">
+            </div>
 
+            <div class="address">
               <label for="street_address">Street Address</label>
               <input type="text" id="street_address" name="user_streetaddress">
+            </div>
 
+            <div class="city">
               <label for="city">City</label>
               <input type="text" id="city" name="user_city">
+            </div>
 
+            <div class="state">
               <label for="state">State</label>
               <select id="state" name="user_state">
                 <option value="AL">Alabama</option>
@@ -99,9 +110,13 @@
                 <option value="WI">Wisconsin</option>
                 <option value="WY">Wyoming</option>
               </select>
+            </div>
 
+            <div class="zipcode">
               <label for="zipcode">Zipcode</label>
               <input type="number" id="zipcode" name="user_zipcode">
+            </div>
+
 
           </fieldset>
 
